sass/_navbar.scss
.svflag, .ukflag{
	width:26px;
	height:26px;
	margin-bottom:10px;
	cursor:pointer;
}

.svflag:active, .ukflag:active{
	transform: translateY(2px);
}

.ukflag{
	margin-right: 8px;
}

.svflag{
	margin-right: 10px;
}

.navbar-brand{
	margin-left: 25px;
}

.gamepad{
	padding-right: 15px;
	color:rgb(255, 255, 255);
}
.icon-resize{
font-size: 27px;
}

.nav-link{
	margin:0px;
	padding:0px;
}

.nav-margin{
	margin-top:5px;
}

@media only screen and (max-width: 768px) {
    .gamepad {
		margin-top: 20px;
	}
	.svflag, .ukflag{
		margin: 20px 0;
	}
}

